Fixed spacing discrepency on lit.rocks

--- a/css/main.css
+++ b/css/main.css
@@ -283,9 +283,10 @@ article {
 }
 
 .instagram-media {
-    margin: auto !important;
     margin-bottom: 50px !important;
-    max-width: 400px !important;
+    margin-left: 25px !important;
+    margin-right: 25px !important;
+    max-width: 350px !important;
     /*
     box-shadow: 0px 0px 0px #FFFFFF !important;
     border-style: solid !important;
